chore: list-up algorithm problem

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "files.associations": {
     "vector": "cpp",
     "xstring": "cpp",
-    "ios": "cpp"
+    "ios": "cpp",
+    "cfenv": "cpp",
+    "future": "cpp",
+    "ostream": "cpp"
   }
 }
